# novo_muta

./: .gitignore  CMakeLists.txt  README.md  bam_driver.cc  bam_utility.cc  bam_utility.h  bin_driver.cc  count_bin.cc  count_bin_trio.cc  counts_probability.cc  counts_probability_index.cc  em_algorithm.cc  em_algorithm.h  indiv_driver.cc  infinite.cc  infinite_driver.cc  parameter_estimates.cc  parameter_estimates.h  parse_bam_header.cc  parse_neg_trio.cc  pileup_driver.cc  pileup_utilities.cc  pileup_utility.cc  pileup_utility.h  read_dependent_data.cc  read_dependent_data.h  simulation_driver.cc  simulation_model.cc  simulation_model.h  simulation_trio.cc  sufficient_statistics.cc  sufficient_statistics.h  test_utility.cc  trio_model.cc  trio_model.h  utilities.cc  utilities.h  utility.cc  utility.h  variant_visitor.cc  (+1 more)
Modules/: FindBamTools.cmake
samples/: output_21_48m_48m500_sorted.bam
test/: test_em_algorithm.cc  test_parameter_estimates.cc  test_pileup_utility.cc  test_read_dependent_data.cc  test_simulation_model.cc  test_sufficient_statistics.cc  test_trio_model.cc  test_utility.cc
